# pyxpcs

./: .gitignore  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
examples/: Rigaku Analysis.ipynb  XPCS Analysis & Comparison - I.ipynb  XPCS Analysis HDF5.ipynb  XPCS Analysis IMM.ipynb  XPCS Analysis.ipynb  example.py  hdf5_analysis.py  notebook.ipynb  notebook.py  notebook_read.py  rigaku_analysis.py  sparse_data_test.py  test.py
src/: corr.cpp  main.cpp
src/examples/: notebook.ipynb
src/libpyxpcs/: corr.cpp  row.h  sparse_data.cpp  sparse_data.h
src/pyxpcs/: algorithms.py  array.py  config.py  corr.cpp  reader.py  structs.py  utils.py  viz.py
tests/: test.py
